src/test/resources/wacc_examples/valid/imports/doubleImport.wacc
# checks to make sure we appropriately handle files that import each other
# expected behavior: any "double import" should be ignored

# Output:

# Program:

begin
    include "importFiles/importsDoubleImport.wacc"
    int foo() is
        return 3
    end
    skip
end