src/test/resources/wacc_examples/invalid/semanticErr/imports/importedFunctionAlreadyDeclared.wacc
begin
    include "importFiles/fileWithFooFunction.wacc"
	int foo() is
		return 0
	end
	skip
end